@@ -20,7 +20,6 @@ package org.apache.pinot.integration.tests;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -51,6 +50,8 @@ import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertTrue;
+
 
 public class TimeSeriesIntegrationTest extends BaseClusterIntegrationTest {
 
@@ -277,6 +278,11 @@ public class TimeSeriesIntegrationTest extends BaseClusterIntegrationTest {
         validator.validate(tsArray.get(i).asLong(), valArray.get(i).asLong(), metric);
       }
     }
+
+    // Validate query stats
+    assertTrue(Long.parseLong(result.path("totalDocs").asText()) > 0);
+    assertTrue(Long.parseLong(result.path("numDocsScanned").asText()) > 0);
+    assertTrue(Long.parseLong(result.path("numSegmentsQueried").asText()) > 0);
   }
 
   private List<String> extractStrings(JsonNode arrayNode) {
@@ -381,7 +387,7 @@ public class TimeSeriesIntegrationTest extends BaseClusterIntegrationTest {
   public File createAvroFile()
     throws Exception {
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
-    avroSchema.setFields(ImmutableList.of(
+    avroSchema.setFields(List.of(
       createAvroField(TS_COLUMN, org.apache.avro.Schema.Type.LONG),
       createAvroField(DAYS_SINCE_FIRST_TRIP_COLUMN, org.apache.avro.Schema.Type.LONG),
       createAvroField(DEVICE_OS_COLUMN, org.apache.avro.Schema.Type.STRING),
